# naapc

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.yaml  temp.py
src/naapc/: __init__.py  base.py  dict_traverse.py  functional.py  nconfig.py  ndict.py  snd.py  stop_conditions.py
test/: config.yaml  config_arg_spe.yaml  init.json  init_flatten.json  init_keys_depth1.json  init_keys_depth2.json  init_keys_depth3.json  init_nested.json  init_update1_gt_flatten.json  test.py  test_ndict.py  test_snd.py  utils.py
test/assets/: delimiter_flatten.json  init.json  init_del.json  init_getitem.json  init_keys_depth-1.json  init_keys_depth2.json  init_keys_depth3.json  init_nested.json  init_paths.json  init_update1_gt_nested.json  init_update_no_none_gt_flatten.json  init_update_no_none_gt_nested.json  values_depth-1.json  values_depth1.json  values_depth2.json  values_depth3.json
